--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@ title:
 <p>The only $CURRENCY you'll ever need !</p> <br />
 
 <a href="https://discord.gg/sdDywdQCqy" class="btn" id="discord" role="button"> Join Discord  <i class="fa fa-discord"></i> </a> &nbsp
-<a href="https://geniusthrong.com/free-mint" class="btn" id="dapp" role="button"> Free NFT  <i class="fa fa-arrow-circle-right"></i> </a>
+<a href="https://geniusthrong.com/free-mint" class="btn" id="dapp" role="button"> Buy Now  <i class="fa fa-arrow-circle-right"></i> </a>
 
