--- a/contact.html
+++ b/contact.html
@@ -2,14 +2,14 @@
 layout: null
 section-type: connect
 title: Connect
-email: TheGeniusThrong@gmail.com
+email: thecurrencyofsol@gmail.com
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: discord
     url: https://discord.gg/sdDywdQCqy
   - title: twitter
-    url: https://twitter.com/TheGeniusThrong
+    url: https://twitter.com/TheOnlyCurrency
   - title: instagram
     url: https://instagram.com/geniusthrong
 ---
