--- a/about.html
+++ b/about.html
@@ -5,12 +5,12 @@ title: About
 ---
 <h2 style="color:#C8FD2B;"> About </h2>
 
-<h3>Welcome to <a href="#" target="_blank">$CURRENCY</a> - the crypto wonderland where wallets have more personality than your neighbor's cat and transactions are more suspenseful than a spy thriller. </h3><br/>
-<h4>We're not your run-of-the-mill token; we're the rockstars of the blockchain, and our tagline is the cosmic truth: "The only currency you'll ever need."</h4><br/>
-<h4>But hey, let's cut through the digital banter and get real for a moment.</h4><br/> 
-<h4>We're not just here to tickle your funny bone; we're here to redefine your entire crypto experience.</h4><br/> 
-<h4>Consider us your financial sidekick - reliable, trustworthy, and definitely more entertaining than your last Zoom meeting.</h4><br/> 
-<h4>So, join the Currency party, where the laughs are plenty, the security is tighter than your grandma's grip on her purse, and your financial future gets a front-row seat to the comedy show.</h4><br/> 
+<h3>Welcome to <a href="#" target="_blank">$CURRENCY</a> - the crypto wonderland where wallets have more personality than your neighbor's cat and transactions are more suspenseful than a spy thriller. </h3>
+<h4>We're not your run-of-the-mill token; we're the rockstars of the blockchain, and our tagline is the cosmic truth: "The only currency you'll ever need."</h4>
+<h4>But hey, let's cut through the digital banter and get real for a moment.</h4>
+<h4>We're not just here to tickle your funny bone; we're here to redefine your entire crypto experience.</h4> 
+<h4>Consider us your financial sidekick - reliable, trustworthy, and definitely more entertaining than your last Zoom meeting.</h4> 
+<h4>So, join the Currency party, where the laughs are plenty, the security is tighter than your grandma's grip on her purse, and your financial future gets a front-row seat to the comedy show.</h4>
 <h4>$CURRENCY: because life's too short for boring wallets and humorless transactions!</h4><br/>
 
 <h2 style="color:#C8FD2B;"> Giveaway Roadmap </h2>
