--- a/about.html
+++ b/about.html
@@ -11,4 +11,4 @@ title: About
 We're not just here to tickle your funny bone; we're here to redefine your entire crypto experience. 
 <h4>Consider us your financial sidekick - reliable, trustworthy, and definitely more entertaining than your last Zoom meeting.</h4> 
 <h4>So, join the Currency party, where the laughs are plenty, the security is tighter than your grandma's grip on her purse, and your financial future gets a front-row seat to the comedy show.</h4>
-<h4 style="color:#C8FD2B;">$CURRENCY: because life's too short for boring wallets and humorless transactions!</h4><br/>
+<h4 style="color:#C8FD2B;">$CURRENCY: because life's too short for boring wallets and humorless transactions!</h4>
