--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@ layout: null
 section-type: default
 title: About
 ---
+<div class="about-section">
 <h2 style="color:#C8FD2B;"> About </h2>
 
 <h3>Welcome to the<a href="#" target="_blank">$CURRENCY</a> - a crypto wonderland where wallets have more personality than your neighbor's cat and transactions are more suspenseful than a spy thriller. </h3>
@@ -12,3 +13,13 @@ We're not just here to tickle your funny bone; we're here to redefine your entir
 <h4>Consider us your financial sidekick - reliable, trustworthy, and definitely more entertaining than your last Zoom meeting.</h4> 
 <h4>So, join the Currency party, where the laughs are plenty, the security is tighter than your grandma's grip on her purse, and your financial future gets a front-row seat to the comedy show.</h4>
 <h4 style="color:#C8FD2B;">$CURRENCY: because life's too short for boring wallets and humorless transactions!</h4>
+</div>
+
+<div class="tokenomics-container">
+<h2 style="color:#C8FD2B;"> Tokenomics </h2>
+
+<h2>Tokenomics coming soon...</h2>
+</div>
+<h2 style="color:#C8FD2B;"> Tokenomics </h2>
+
+<h2>Tokenomics coming soon...</h2>
