--- a/career.html
+++ b/career.html
@@ -3,4 +3,4 @@ layout: null
 section-type: timeline
 title: Roadmap
 ---
-<h2 style="color:#C8FD2B;"> Roadmap </h2>
+<h2 style="color:#FFD700;"> Roadmap </h2>
