--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@ social:
   - title: instagram
     url: https://instagram.com/geniusthrong
 ---
-<h2 style="color:#C8FD2B;"> Connect </h2>
+<h2 style="color:#FFD700;"> Connect </h2>
 
 Join the community, follow the below discord & social media handles to get the latest updates and exclusive access to The GeniusThrong NFTs, Giveaways and to secure Whitelist spots during special events.
 
