--- a/about.html
+++ b/about.html
@@ -7,16 +7,15 @@ title: About
 <h2 style="color:#FFD700;"> About </h2>
 
 <h3>Welcome to the <a href="#" target="_blank">$CURRENCY</a> - a crypto wonderland where wallets have more personality than your neighbor's cat and transactions are more suspenseful than a spy thriller. </h3>
-<h4>We're not your run-of-the-mill token, we're the rockstars of the blockchain, and our tagline is the cosmic truth: "The only $CURRENCY you'll ever need."</h4>
-<h4>But hey, let's cut through the digital banter and get real for a moment.
-We're not just here to tickle your funny bone, we're here to redefine your entire crypto experience.</h4> 
+<h4>We're not your run-of-the-mill token, we're the rockstars of the blockchain, and our tagline is the cosmic truth: <span style="color:#FFD700;">"The only $CURRENCY you'll ever need."</span></h4>
+<h4>But hey, let's cut through the digital banter and get real for a moment. We're not just here to tickle your funny bone, we're here to redefine your entire crypto experience.</h4> 
 <h4>Consider us your crypto sidekick - reliable, trustworthy, and definitely more entertaining than your last Zoom meeting.</h4> 
 <h4>So, join the $CURRENCY party, where the laughs are plenty, the security is tighter than your grandma's grip on her purse, and your crypto future gets a front-row seat to the comedy show.</h4>
 <h4 style="color:#FFD700;">$CURRENCY: because life's too short for boring wallets and humorless transactions!</h4>
 </div>
 
-<div id="Tokenomics" class="tokenomics-container">
-<h2 style="color:#FFD700;"> Tokenomics </h2>
+<div class="tokenomics-container">
+<h2 id="Tokenomics" style="color:#FFD700;"> Tokenomics </h2>
 
 <h2>Tokenomics coming soon...</h2>
 </div>
