--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@ title:
 
 <p>The only $CURRENCY you'll ever need !</p> <br />
 
-<a href="https://discord.gg/sdDywdQCqy" class="btn" id="twitter" role="button"> Join Twitter  <i class="fa-brands fa-x-twitter"></i> </a> &nbsp
-<a href="https://geniusthrong.com/free-mint" class="btn" id="buyNow" role="button"> Buy Now  <i class="fa fa-arrow-circle-right"></i> </a>
+<a href="#" class="btn" id="twitter" role="button"> Join Twitter  <i class="fa-brands fa-x-twitter"></i> </a> &nbsp
+<a href="#" class="btn" id="buyNow" role="button"> Buy Now  <i class="fa fa-arrow-circle-right"></i> </a>
 
