--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: 
 ---
 
-<p>The only $CURRENCY you'll ever need !</p> <br />
+<p class="banner-text">The only <span style="color:#FFD700;">$CURRENCY</span> you'll ever need !</p> <br />
 
 <a href="#" class="btn" id="twitter" role="button"> Join Twitter  <i class="fa-brands fa-x-twitter"></i> </a> &nbsp
 <a href="#" class="btn" id="buyNow" role="button"> Buy Now  <i class="fa fa-arrow-circle-right"></i> </a>
