--- a/about.html
+++ b/about.html
@@ -4,14 +4,14 @@ section-type: default
 title: About
 ---
 <div class="about-section">
-<h2 style="color:#FFD700;"> About </h2>
+<h2 style="color:#FFD700; text-align: center;"> About </h2>
 
 <h4>Welcome to the <a href="#" target="_blank">$CURRENCY</a> - a crypto wonderland where wallets have more personality than your neighbor's cat and transactions are more suspenseful than a spy thriller. </h4>
 <h4>We're not your run-of-the-mill token, we're the rockstars of the blockchain, and our tagline is the cosmic truth: <span style="color:#FFD700;">"The only $CURRENCY you'll ever need."</span></h4>
 <h4>But hey, let's cut through the digital banter and get real for a moment. We're not just here to tickle your funny bone, we're here to redefine your entire crypto experience.
 Consider us your crypto sidekick - reliable, trustworthy, and definitely more entertaining than your last Zoom meeting.
 So, join the $CURRENCY party, where the laughs are plenty, the security is tighter than your grandma's grip on her purse, and your crypto future gets a front-row seat to the comedy show.</h4>
-<h4 style="color:#FFD700;">$CURRENCY: because life's too short for boring wallets and humorless transactions!</h4>
+<h4 style="color:#FFD700; text-align: center;">$CURRENCY: because life's too short for boring wallets and humorless transactions!</h4>
 </div>
 
 <div class="tokenomics-container">
@@ -21,27 +21,27 @@ So, join the $CURRENCY party, where the laughs are plenty, the security is tight
     <svg class="ico-cup">
       <use xlink:href="#cup"></use>
     </svg>
-    Most active Players
+    $CURRENCY Tokenomics
   </h1>
   <ol>
     <li>
-      <mark>Jerry Wood</mark>
-      <small>315</small>
+      <mark>Total Supply</mark>
+      <small>1000000000</small>
     </li>
     <li>
-      <mark>Brandon Barnes</mark>
-      <small>301</small>
+      <mark>Marketing</mark>
+      <small>10%</small>
     </li>
     <li>
-      <mark>Raymond Knight</mark>
-      <small>292</small>
+      <mark>Community</mark>
+      <small>70%</small>
     </li>
     <li>
-      <mark>Trevor McCormick</mark>
+      <mark>Test</mark>
       <small>245</small>
     </li>
     <li>
-      <mark>Andrew Fox</mark>
+      <mark>Test</mark>
       <small>203</small>
     </li>
   </ol>
