--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@ So, join the $CURRENCY party, where the laughs are plenty, the security is tight
   <ol>
     <li class="token">
       <mark>Total Supply</mark>
-      <small>1000000000</small>
+      <small>10 Billion</small>
     </li>
     <li class="token">
       <mark>Marketing</mark>
