--- a/about.html
+++ b/about.html
@@ -6,12 +6,12 @@ title: About
 <div class="about-section">
 <h2 style="color:#FFD700; text-align: center;"> About </h2>
 
-<p class="about-text">Welcome to the <a href="#" target="_blank">$CURRENCY</a> - a crypto wonderland where wallets have more personality than your neighbor's cat and transactions are more suspenseful than a spy thriller. </p>
+<p class="about-text">Welcome to the <a href="#" target="_blank">$CURRENCY</a> - a crypto wonderland where wallets have more personality than your neighbour's cat and transactions are more suspenseful than a spy thriller. </p>
 <p class="about-text">We're not your run-of-the-mill token, we're the rockstars of the blockchain, and our tagline is the cosmic truth: <span style="color:#FFD700;">"The only $CURRENCY you'll ever need."</span></p>
 <p class="about-text">But hey, let's cut through the digital banter and get real for a moment. We're not just here to tickle your funny bone, we're here to redefine your entire crypto experience.
 Consider us your crypto sidekick - reliable, trustworthy, and definitely more entertaining than your last Zoom meeting.
 So, join the $CURRENCY party, where the laughs are plenty, the security is tighter than your grandma's grip on her purse, and your crypto future gets a front-row seat to the comedy show.</p>
-<p class="about-text-end" style="color:#FFD700; text-align: center;">$CURRENCY: because life's too short for boring wallets and humorless transactions!</p>
+<p class="about-text-end" style="color:#FFD700; text-align: center;">$CURRENCY: because life's too short for boring wallets and humourless transactions!</p>
 </div>
 
 <div class="tokenomics-container">
