--- a/about.html
+++ b/about.html
@@ -22,21 +22,21 @@ So, join the $CURRENCY party, where the laughs are plenty, the security is tight
       <mark>Total Supply</mark>
       <small>10 Billion</small>
     </li>
+        <li class="token">
+      <mark>Liquidity</mark>
+      <small>70%</small>
+    </li>
+    <li class="token">
+      <mark>Airdrop</mark>
+      <small>10%</small>
+    </li>
     <li class="token">
       <mark>Marketing</mark>
       <small>10%</small>
     </li>
     <li class="token">
-      <mark>Community</mark>
-      <small>70%</small>
-    </li>
-    <li class="token">
-      <mark>Test</mark>
-      <small>245</small>
-    </li>
-    <li class="token">
-      <mark>Test</mark>
-      <small>203</small>
+      <mark>Developers</mark>
+      <small>10%</small>
     </li>
   </ol>
 </div>
