--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@ title:
 
 <p class="banner-text">The only <span style="color:#FFD700;">$CURRENCY</span> you'll ever need !</p> <br />
 
-<a href="#" class="btn" id="twitter" role="button"> Join Twitter  <i class="fa-brands fa-x-twitter"></i> </a> &nbsp
+<a href="https://twitter.com/TheOnlyCurrency" class="btn" id="twitter" role="button"> Join Twitter  <i class="fa-brands fa-x-twitter"></i> </a> &nbsp
 <a href="#" class="btn" id="buyNow" role="button"> Buy Now  <i class="fa fa-arrow-circle-right"></i> </a>
 
