--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@ title:
 <p class="banner-text">The only <span style="color:#FFD700;">$CURRENCY</span> you'll ever need !</p> <br />
 
 <a href="https://twitter.com/TheOnlyCurrency" class="btn" id="twitter" role="button"> Join Twitter  <i class="fa-brands fa-x-twitter"></i> </a> &nbsp
-<a href="#" class="btn" id="buyNow" role="button"> Buy Now  <i class="fa fa-arrow-circle-right"></i> </a>
+<a href="https://raydium.io/swap/?outputCurrency=DkUiANYyPjCJPaXnzkb6viwKiMH2t1zBarSu2ePb75hg" class="btn" id="buyNow" role="button"> Buy Now  <i class="fa fa-arrow-circle-right"></i> </a>
+
+<p class="token-address">DkUiANYyPjCJPaXnzkb6viwKiMH2t1zBarSu2ePb75hg</p>
 
