--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@ title:
 <a href="https://twitter.com/TheOnlyCurrency" class="btn" id="twitter" role="button"> Join Twitter  <i class="fa-brands fa-x-twitter"></i> </a> &nbsp
 <a href="https://raydium.io/swap/?outputCurrency=DkUiANYyPjCJPaXnzkb6viwKiMH2t1zBarSu2ePb75hg" class="btn" id="buyNow" role="button"> Buy Now  <i class="fa fa-arrow-circle-right"></i> </a>
 
-<p class="token-address">DkUiANYyPjCJPaXnzkb6viwKiMH2t1zBarSu2ePb75hg</p>
+<p class="token-address">TOKEN ADDRESS: <p class="address">DkUiANYyPjCJPaXnzkb6viwKiMH2t1zBarSu2ePb75hg</p></p>
 
