--- a/contact.html
+++ b/contact.html
@@ -11,4 +11,4 @@ social:
 ---
 <h2 style="color:#FFD700;"> Connect </h2>
 
-Join the community, follow the below social media handles to get the latest updates, Airdrops during special events.
+Join the community, follow the social media handles to get the latest updates, Airdrops during special events.
