--- a/about.html
+++ b/about.html
@@ -40,4 +40,5 @@ So, join the $CURRENCY party, where the laughs are plenty, the security is tight
     </li>
   </ol>
 </div>
+<h4 class="tokenomics-end">0% Buy/Sell Tax & 0% Transfer fee</h4>
 </div>
